@@ -1,6 +1,7 @@
 Ver.
 ---------------------------
 - Feature - Add AdultInfo prop to Report, but NOT in ReportDto (migration added) (#15)
+- Feature - Add GroupIcon prop to Category, UnitOfMeasure moved to cat_translations (migration added) (#16)
 
 Ver. 1.5.0 - 2021-02-25
 ---------------------------
